src/test/testFiles/invalid/semanticErrors/incorrectNumberOfIndicesFor2DArray.val
let arr2 = Array<Array<boolean>>(5);
arr2[0][0][0] = 1;